@@ -150,7 +150,10 @@ header("Cache-Control: public");
 header("Content-Type: text/xml");
 //$obj2 = trim($obj);
 if ($obj != "" ) {
-   $obj2 = print_rspec_pretty($obj);
+   $manifestOnly=True;
+   $filterToAM = True;	
+   $arg_urn = am_urn($am_url);
+   $obj2 = print_rspec_pretty($obj, $manifestOnly, $filterToAM, $arg_urn);
    print $obj2; 
 } else {
 
